--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0; url=https://paragraphs-printable-isaac-minnesota.trycloudflare.com/karaoke/">
-  <title>Redirecting....</title>
+  <title>Redirecting......</title>
 </head>
 <body>
   <p>If you are not redirected, <a href="https://paragraphs-printable-isaac-minnesota.trycloudflare.com/karaoke/">click here</a>.</p>
